--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:src="@drawable/c"
+            android:layout_marginTop="50dp"
             android:layout_weight="2"
-            android:layout_marginTop="50dp"/>
+            android:src="@drawable/c"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -29,30 +29,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"
-            android:orientation="vertical"
+            android:layout_weight="3"
             android:background="@color/primary"
+            android:orientation="vertical"
             android:padding="16sp"
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="Instructions:"
-                android:textStyle="bold"
-                android:textSize="26sp"
                 android:gravity="center_vertical"
-                android:textColor="@color/icons"/>
+                android:text="Instructions:"
+                android:textColor="@color/icons"
+                android:textSize="26sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
+                android:padding="8sp"
                 android:text="
 -->Tilt into Landscape to Start \n\n
 -->Tap on the area from where the player shot.\n\n
 -->Tilt back to Reset."
-                android:padding="8sp"
                 android:textColor="@color/primary_light"/>
         </LinearLayout>
 
