Changed the background

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/b1"
     tools:context="com.example.android.scorepad.MainActivity"
-    android:background="@drawable/b"
     >
 
 
@@ -12,43 +12,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:layout_margin="8dp"
+        android:orientation="horizontal"
+        android:paddingTop="16sp"
         >
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textAlignment="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:textAlignment="center">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
                     android:text="Team A"
-                    android:textSize="26sp"
                     android:textAlignment="center"
-                    android:textColor="#212121"/>
+                    android:textColor="#FFFFFF"
+                    android:textSize="26sp"/>
 
                 <TextView
                     android:id="@+id/score_team_a"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
-                    android:text="0"
-                    android:textSize="52sp"
-                    android:textAlignment="center"
-                    android:textColor="#212121"
                     android:gravity="center"
+                    android:text="0"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="52sp"
                     />
 
                 <LinearLayout
@@ -58,38 +59,38 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_height="match_parent"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:gravity="center"
+                        android:onClick="a2"
                         android:text="+2"
                         android:textAlignment="center"
-                        android:textColor="#212121"
+                        android:textColor="#FFFFFF"
                         android:textSize="52sp"
-                        android:onClick="a2"
-                        android:gravity="center"
                         />
 
                     <TextView
-                        android:layout_height="match_parent"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:gravity="center"
+                        android:onClick="a3"
                         android:text="+3"
                         android:textAlignment="center"
-                        android:textSize="52sp"
-                        android:textColor="#212121"
-                        android:gravity="center"
-                        android:onClick="a3"/>
+                        android:textColor="#FFFFFF"
+                        android:textSize="52sp"/>
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    android:textSize="36sp"
-                    android:text="FREE THROW!!"
-                    android:textColor="#212121"
-                    android:textAlignment="center"
                     android:onClick="aft"
+                    android:text="FREE THROW!!"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="36sp"
                     />
 
             </LinearLayout>
@@ -101,35 +102,35 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:textAlignment="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:textAlignment="center">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
                     android:text="Team B"
-                    android:textSize="26sp"
                     android:textAlignment="center"
-                    android:textColor="#212121"/>
+                    android:textColor="#FFFFFF"
+                    android:textSize="26sp"/>
 
                 <TextView
                     android:id="@+id/score_team_b"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
-                    android:text="0"
-                    android:textSize="52sp"
                     android:gravity="center"
-                    android:textColor="#212121"/>
+                    android:text="0"
+                    android:textColor="#FFFFFF"
+                    android:textSize="52sp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -138,38 +139,38 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_height="match_parent"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="3"
-                        android:text="+3"
-                        android:textAlignment="center"
-                        android:textColor="#212121"
-                        android:textSize="52sp"
                         android:gravity="center"
                         android:onClick="b3"
+                        android:text="+3"
+                        android:textAlignment="center"
+                        android:textColor="#FFFFFF"
+                        android:textSize="52sp"
                         />
 
                     <TextView
-                        android:layout_height="match_parent"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:gravity="center"
+                        android:onClick="b2"
                         android:text="+2"
                         android:textAlignment="center"
-                        android:textSize="52sp"
-                        android:gravity="center"
-                        android:textColor="#212121"
-                        android:onClick="b2"/>
+                        android:textColor="#FFFFFF"
+                        android:textSize="52sp"/>
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    android:textSize="36sp"
-                    android:text="FREE THROW!!"
-                    android:textColor="#212121"
-                    android:textAlignment="center"
                     android:onClick="bft"
+                    android:text="FREE THROW!!"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="36sp"
                     />
 
             </LinearLayout>
