--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,8 @@
 -->Tilt into Landscape to Start \n\n
 -->Tap on the area from where the player shot.\n\n
 -->Tilt back to Reset."
-                android:textColor="@color/primary_light"/>
+                android:textColor="@color/primary_light"
+                android:textSize="16sp"/>
         </LinearLayout>
 
 
