--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,17 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/b1"
+
     tools:context="com.example.android.scorepad.MainActivity"
     >
-
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
+
         android:orientation="horizontal"
-        android:paddingTop="16sp"
         >
 
         <LinearLayout
@@ -35,6 +34,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
+                    android:background="@color/accent"
+                    android:gravity="bottom"
                     android:text="Team A"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
@@ -45,6 +46,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
+                    android:background="@color/accent"
+                    android:elevation="10sp"
                     android:gravity="center"
                     android:text="0"
                     android:textAlignment="center"
@@ -62,6 +65,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:background="@drawable/custombg"
+                        android:clickable="true"
                         android:gravity="center"
                         android:onClick="a2"
                         android:text="+2"
@@ -74,6 +79,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:background="@drawable/custombg"
+                        android:clickable="true"
                         android:gravity="center"
                         android:onClick="a3"
                         android:text="+3"
@@ -117,6 +124,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
+                    android:background="@color/accent"
+                    android:gravity="bottom"
                     android:text="Team B"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
@@ -127,6 +136,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
+                    android:background="@color/accent"
                     android:gravity="center"
                     android:text="0"
                     android:textColor="#FFFFFF"
