Changed Color Pallete.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -34,7 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
-                    android:background="@color/accent"
+                    android:background="@color/fAccent"
                     android:gravity="bottom"
                     android:text="Team A"
                     android:textAlignment="center"
@@ -46,7 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
-                    android:background="@color/accent"
+                    android:background="@color/fAccent"
                     android:elevation="10sp"
                     android:gravity="center"
                     android:text="0"
@@ -86,13 +86,17 @@
                         android:text="+3"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="52sp"/>
+                        android:textSize="52sp"
+                        />
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:background="@drawable/custombg"
+                    android:clickable="true"
+                    android:gravity="center_vertical"
                     android:onClick="aft"
                     android:text="FREE THROW!!"
                     android:textAlignment="center"
@@ -124,7 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
-                    android:background="@color/accent"
+                    android:background="@color/fAccent"
                     android:gravity="bottom"
                     android:text="Team B"
                     android:textAlignment="center"
@@ -136,7 +140,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
-                    android:background="@color/accent"
+                    android:background="@color/fAccent"
                     android:gravity="center"
                     android:text="0"
                     android:textColor="#FFFFFF"
@@ -152,6 +156,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:background="@drawable/custombg"
+                        android:clickable="true"
                         android:gravity="center"
                         android:onClick="b3"
                         android:text="+3"
@@ -164,18 +170,24 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
+                        android:background="@drawable/custombg"
+                        android:clickable="true"
                         android:gravity="center"
                         android:onClick="b2"
                         android:text="+2"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="52sp"/>
+                        android:textSize="52sp"
+                        />/>
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
+                    android:background="@drawable/custombg"
+                    android:clickable="true"
+                    android:gravity="center_vertical"
                     android:onClick="bft"
                     android:text="FREE THROW!!"
                     android:textAlignment="center"
