--- a/app/src/main/res/values/colors_deep_orange_brown.xml
+++ b/app/src/main/res/values/colors_deep_orange_brown.xml
@@ -3,9 +3,11 @@
   <color name="primary">#FF5722</color>
   <color name="primary_dark">#E64A19</color>
   <color name="primary_light">#FFCCBC</color>
-  <color name="accent">#C3795548</color>
+  <color name="accent">#795548</color>
+  <color name="fAccent">#C3795548</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#727272</color>
   <color name="icons">#FFFFFF</color>
+  <color name="fIcons">#3CFFFFFF</color>
   <color name="divider">#B6B6B6</color>
 </resources>
