--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -39,7 +39,8 @@
                     android:text="Team A"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
-                    android:textSize="26sp"/>
+                    android:textSize="26sp"
+                    android:onClick="endGame"/>
 
                 <TextView
                     android:id="@+id/score_team_a"
@@ -47,7 +48,6 @@
                     android:layout_height="0dp"
                     android:layout_weight="4"
                     android:background="@color/fAccent"
-                    android:elevation="10sp"
                     android:gravity="center"
                     android:text="0"
                     android:textAlignment="center"
@@ -69,10 +69,11 @@
                         android:clickable="true"
                         android:gravity="center"
                         android:onClick="a2"
-                        android:text="+2"
+                        android:text="@string/plustwo"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
                         android:textSize="52sp"
+                        android:layout_margin="5dp"
                         />
 
                     <TextView
@@ -82,8 +83,9 @@
                         android:background="@drawable/custombg"
                         android:clickable="true"
                         android:gravity="center"
+                        android:layout_margin="5dp"
                         android:onClick="a3"
-                        android:text="+3"
+                        android:text="@string/plusthree"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
                         android:textSize="52sp"
@@ -95,10 +97,11 @@
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:background="@drawable/custombg"
+                    android:layout_margin="5dp"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:onClick="aft"
-                    android:text="FREE THROW!!"
+                    android:text="@string/freethrow"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
                     android:textSize="36sp"
@@ -133,7 +136,9 @@
                     android:text="Team B"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
-                    android:textSize="26sp"/>
+                    android:textSize="26sp"
+                    android:onClick="endGame"/>
+
 
                 <TextView
                     android:id="@+id/score_team_b"
@@ -157,10 +162,11 @@
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:background="@drawable/custombg"
+                        android:layout_margin="5dp"
                         android:clickable="true"
                         android:gravity="center"
                         android:onClick="b3"
-                        android:text="+3"
+                        android:text="@string/plusthree"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
                         android:textSize="52sp"
@@ -171,25 +177,28 @@
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:background="@drawable/custombg"
+                        android:layout_margin="5dp"
                         android:clickable="true"
                         android:gravity="center"
                         android:onClick="b2"
-                        android:text="+2"
+                        android:text="@string/plustwo"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
                         android:textSize="52sp"
-                        />/>
-                </LinearLayout>
+                        />
+
+                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:background="@drawable/custombg"
+                    android:layout_margin="5dp"
                     android:clickable="true"
                     android:gravity="center_vertical"
                     android:onClick="bft"
-                    android:text="FREE THROW!!"
+                    android:text="@string/freethrow"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
                     android:textSize="36sp"
