--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,22 +11,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/accent">
 
-        <ImageView
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="50dp"
-            android:layout_weight="2"
-            android:src="@drawable/c"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="ScorePad"
-            android:textSize="32sp"
-            android:textStyle="bold"/>
+            android:layout_weight="3"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            card_view:cardElevation="15dp"
+            android:onClick="startGame">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_weight="2"
+                    android:src="@drawable/c"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="ScorePad"
+                    android:textSize="32sp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -49,14 +73,10 @@
                 android:layout_height="0dp"
                 android:layout_weight="3"
                 android:padding="8sp"
-                android:text="
--->Tilt into Landscape to Start \n\n
--->Tap on the area from where the player shot.\n\n
--->Tilt back to Reset."
+                android:text="@string/Instructions"
                 android:textColor="@color/primary_light"
                 android:textSize="16sp"/>
         </LinearLayout>
-
 
     </LinearLayout>
 
