--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:layout_margin="25dp"
-            card_view:cardElevation="15dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="30dp"
+            card_view:cardCornerRadius="10dp"
+            card_view:cardElevation="25dp"
             android:onClick="startGame">
 
             <LinearLayout
